--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -16,15 +16,15 @@
           <ul>
             <li class="btn-home">
               <!-- <a th:href="@{/}">Homepage</a> -->
-              <a href="{% url "/" %}">Homepage</a>
+              <a href="">Homepage</a>
             </li>
             <li>
-              <a th:href="@{/auctionArena/categories}">Categories</a>
-              <a href="{% url "" %}">Categories</a>
+              <!-- <a th:href="@{/auctionArena/categories}">Categories</a> -->
+              <a href="">Categories</a>
             </li>
             <li>
-              <a th:href="@{/auctionArena/customer-service}">Contacts</a>
-              <a href="{% url "" %}">Contacts</a>
+              <!-- <a th:href="@{/auctionArena/customer-service}">Contacts</a> -->
+              <a href="">Contacts</a>
             </li>
           </ul>
         </div>
