css 변경 및 url 주소 연결

--- a/project/static/css/header.css
+++ b/project/static/css/header.css
@@ -181,6 +181,8 @@
 }
 
 .header__menu {
+  font-family: "Mulish", sans-serif;
+  -webkit-font-smoothing: antialiased;
   display: flex;
   align-items: center;
   margin-top: 2px;
