--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Footer Section Begin -->
 <footer class="footer">
   <div class="page-up">
@@ -8,7 +9,7 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="footer__logo">
-          <!-- <a th:href="@{/}"><img th:src="@{/img/logo.png}" alt=""/></a> -->
+          <a href="http://localhost:8080"><img src="{% static "/assets/logo.png" %}" alt=""/></a>
         </div>
       </div>
       <div class="col-lg-6">
@@ -16,15 +17,15 @@
           <ul>
             <li class="btn-home">
               <!-- <a th:href="@{/}">Homepage</a> -->
-              <a href="">Homepage</a>
+              <a href="http://localhost:8080">Homepage</a>
             </li>
             <li>
               <!-- <a th:href="@{/auctionArena/categories}">Categories</a> -->
-              <a href="">Categories</a>
+              <a href="http://localhost:8080/auctionArena/categories/">Categories</a>
             </li>
             <li>
               <!-- <a th:href="@{/auctionArena/customer-service}">Contacts</a> -->
-              <a href="">Contacts</a>
+              <a href="http://localhost:8080/auctionArena/customer-service/">Contacts</a>
             </li>
           </ul>
         </div>
