--- a/project/templates/header.html
+++ b/project/templates/header.html
@@ -2,10 +2,9 @@
 <!-- Header Section Begin -->
 <header class="header">
   <div class="container">
-    <div class="header__menu">
+    <div class="header__menu" style="font-size: 14px">
       <div class="header__logo">
-        <!-- <a th:href="@{/}"><img class="header__logo" th:src="@{/img/logo.png}" alt=""/></a> -->
-        <a href=""><img class="header__logo" src="{% static "assets/logo.png" %}" alt=""/></a>
+        <a href="http://localhost:8080"><img class="header__logo" src="{% static "assets/logo.png" %}" alt=""/></a>
       </div>
       <!-- 검색 -->
       <!-- <form th:action="@{/auctionArena/categories}" role="search" id="searchForm"> -->
@@ -37,19 +36,19 @@
 
           <!-- 로그인 후 -->
           {% comment %} <li sec:authorize="isAuthenticated"> {% endcomment %}
-          <li>
+          {% comment %} <li>
             <!-- <a th:href="@{/member/mypage}"> -->
             <a href="">
               <b>마이페이지</b>
             </a>
-          </li>
+          </li> {% endcomment %}
           {% comment %} <li sec:authorize="isAuthenticated"> {% endcomment %}
-          <li>
+          {% comment %} <li>
             <!-- <a th:href="@{/member/logout}"> -->
             <a href="">
               <b>로그아웃</b>
             </a>
-          </li>
+          </li> {% endcomment %}
         </ul>
       </nav>
     </div>
@@ -59,44 +58,37 @@
           <i class="fa-solid fa-layer-group">
             <ul class="dropdown">
               <li>
-                <!-- <a th:href="@{/auctionArena/categories}"> -->
-                <a href="">
+                <a href="http://localhost:8080/auctionArena/categories">
                   <b>전체</b>
                 </a>
               </li>
               <li>
-                <!-- <a th:href="@{/auctionArena/fashion-category}"> -->
-                <a href="">
+                <a href="http://localhost:8080/auctionArena/fashion-category">
                   <b>패션 의류/잡화</b>
                 </a>
               </li>
               <li>
-                <!-- <a th:href="@{/auctionArena/mobile-category}"> -->
-                <a href="">
+                <a href="http://localhost:8080/auctionArena/mobile-category">
                   <b>모바일/태블릿</b>
                 </a>
               </li>
               <li>
-                <!-- <a th:href="@{/auctionArena/electric-category}"> -->
                 <a href="">
                   <b>가전제품</b>
                 </a>
               </li>
               <li>
-                <!-- <a th:href="@{/auctionArena/game-category}"> -->
-                <a href="">
+                <a href="http://localhost:8080/auctionArena/game-category">
                   <b>게임</b>
                 </a>
               </li>
               <li>
-                <!-- <a th:href="@{/auctionArena/trib-category}"> -->
-                <a href="">
+                <a href="http://localhost:8080/auctionArena/trib-category">
                   <b>레저/여행</b>
                 </a>
               </li>
               <li>
-                <!-- <a th:href="@{/auctionArena/etc-category}"> -->
-                <a href="">
+                <a href="http://localhost:8080/auctionArena/etc-category">
                   <b>기타</b>
                 </a>
               </li>
@@ -105,20 +97,17 @@
         </li>
       </ul>
       <div class="header__category__notice">
-        <!-- <a th:href="@{/auctionArena/product_sale}"> -->
-        <a href="">
+        <a href="http://localhost:8080/auctionArena/product_sale">
           <b>판매하기</b>
         </a>
       </div>
       <div class="header__category__notice">
-        <!-- <a th:href="@{/auctionArena/market_price}"> -->
-        <a href="">
+        <a href="{% url "auctionarena:market_price" %}">
           <b>시세확인</b>
         </a>
       </div>
       <div class="header__category__notice">
-        <!-- <a th:href="@{/notice/notice}"> -->
-        <a href="">
+        <a href="http://localhost:8080/notice/notice">
           <b>공지사항</b>
         </a>
       </div>
