--- a/project/templates/market/market_list.html
+++ b/project/templates/market/market_list.html
@@ -1,4 +1,19 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
-  <h5>Market</h5>
+<h5>시세확인</h5>
+<div class="input-group search">
+  <input type="text" name="" id="keyword" class="search_input" placeholder="검색어를 입력하세요" value="{{keyword|default_if_none:''}}" />
+  <button type="button" id="btn_search" name="btn_search" class="btn btn-outline-success btn_search ml-1">검색</button>
+</div>
+
+<!--검색 버튼 클릭 시 이동할 폼-->
+
+<form action="" method="get" id="actionForm">
+  <input type="hidden" name="form_keyword" id="form_keyword" value="{{keyword|default_if_none:''}}" />
+</form>
+ 
 {% endblock content %}
+{% block script %}
+  <script src="{% static "js/market_list.js" %}"></script>
+{% endblock script %}
