시세 조회 크롤링 기능

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" th:href="@{/css/product_sale.css}" type="text/css"/> {% endcomment %}
     {% comment %} <link rel="stylesheet" th:href="@{/css/floatingbar.css}" type="text/css"/> {% endcomment %}
     <link rel="stylesheet" href="{% static "css/floatingbar.css/" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/market_list.css/" %}" type="text/css"/>
 
     <!-- swiper 사용(이미지 슬라이더) -->
     {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
